# ProjetoFinal

./: CMakeLists.txt  README.md  articles.c  articles.h  clients.c  clients.h  costs.c  costs.h  csv.c  csv.h  database.c  database.h  main.c  menus.c  menus.h  orders.c  orders.h  strs.h  tabeladecustos.json  utils.c  utils.h
orders_management/: orders.c  orders.h  shopping_cart.c  shopping_cart.h
